# OpenDeepSearch

./: config.yaml  pyproject.toml
